# opengl_learning

./: CMakeLists.txt
classes/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
classes/temp/: mesh.cpp  model.cpp  model.h
glad/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: 4.2.texture.fs  shader.fs  shader_color.fs  shader_color.vs  shader_color_lamp.fs  shader_coordinate.fs  shader_maps.fs
shaders/Not_Sorted/: shader.fs  shader.vs  shader_color.fs  shader_color.vs  shader_coordinate.vs  shader_light_caster.fs  shader_material.fs  shader_multiple_light.fs
shaders/model_loading/: model_loading.fs
src/: learnopengl_hellotriangle.cpp  learnopengl_hellotriangle_0.cpp  learnopengl_hellotriangle_2.cpp  learnopengl_hellotriangle_3.cpp  learnopengl_hellotriangle_4.cpp  main.cpp  test_glad.cpp
src/01_Getting_started/01_window/: window.cpp
src/01_Getting_started/02_triangle/: triangle_1.cpp
src/01_Getting_started/06_camera/: camera_0.cpp
src/01_getting_started/02_triangle/: triangle_0.cpp
src/01_getting_started/04_texture/: texture_1.cpp
src/01_getting_started/05_coordinates/: coordinate.cpp
src/02_Lighting/01_Colors/: color_0.cpp  color_1.cpp  color_2.cpp  color_3.cpp
src/03_Model_loading/: model_loading.cpp  test_double_window.cpp  texture_1.cpp
src/04_texture/: texture_1.cpp
src/helloshader/: learnopengl_shader_0.cpp  learnopengl_shader_1.cpp  learnopengl_shader_2.cpp  learnopengl_shader_4.cpp
